<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.invisibleteam.goinvisible.mvvm.settings.SettingsViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ActionBarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_view_margin"
            android:text="@string/periodic_clearing"
            android:textSize="@dimen/section_title_text_size"/>

        <LinearLayout
            android:id="@+id/periodic_clearing_section_switch_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_view_margin"
                android:layout_weight="3"
                android:text="@string/enable_periodic_clearing"
                android:textSize="@dimen/section_description_text_size"/>

            <Switch
                android:id="@+id/periodic_clearing_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="@{viewModel.getIsEnabled().get()}"
                android:gravity="center"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_view_margin"
                android:layout_weight="3"
                android:enabled="@{viewModel.getIsEnabled().get()}"
                android:text="@string/clearing_service_interval"
                android:textSize="@dimen/section_description_text_size"
                android:id="@+id/textView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_view_margin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:enabled="@{viewModel.getIsEnabled().get()}"
                android:text="1 day"
                android:textSize="@dimen/section_description_text_size"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

</layout>